--- a/bot/languages/de.json
+++ b/bot/languages/de.json
@@ -1,4 +1,14 @@
 {
+  "activated": "Aktiviert",
+  "deactivated": "Deaktiviert",
+  "userRemoveMoneyNotifyTitle": "Geld wurde entfernt",
+  "userRemoveMoneyNotifyContent": "Der Benutzer {user} hat {amount} <:blackToken:1304186797064065065> von deinem Konto entfernt.",
+  "userDeletedNotifyTitle": "Dein Konto wurde gelöscht",
+  "userDeletedNotifyContent": "Dein Konto wurde von {user} gelöscht.",
+  "reason": "Grund",
+  "noReason": "Kein Grund angegeben",
+  "userMessageAddMoneyTitle": "{user} hat dir ein Geschenk geschickt!",
+  "userMessageAddMoneyContent": "Du hast einen Betrag von **{amount}** <:blackToken:1304186797064065065> erhalten.",
   "modifyProfileError": "Du hast nichts am Benutzer {user} geändert.",
   "modifyProfileContent": "Das Profil von {user} sieht jetzt so aus:",
   "errorBikeSellContent": "Du hast nicht genug Fahrräder. Du hast nur {bike}.",
