--- a/bot/languages/el.json
+++ b/bot/languages/el.json
@@ -1,4 +1,14 @@
 {
+  "activated": "Ενεργοποιημένο",
+  "deactivated": "Απενεργοποιημένο",
+  "userRemoveMoneyNotifyTitle": "Αφαιρέθηκαν χρήματα",
+  "userRemoveMoneyNotifyContent": "Ο χρήστης {user} αφαίρεσε {amount} <:blackToken:1304186797064065065> από τον λογαριασμό σου.",
+  "userDeletedNotifyTitle": "Ο λογαριασμός σου διαγράφηκε",
+  "userDeletedNotifyContent": "Ο λογαριασμός σου διαγράφηκε από τον {user}.",
+  "reason": "Αιτία",
+  "noReason": "Δεν δόθηκε αιτία",
+  "userMessageAddMoneyTitle": "Ο {user} σου έστειλε ένα δώρο!",
+  "userMessageAddMoneyContent": "Έλαβες το ποσό των **{amount}** <:blackToken:1304186797064065065>.",
   "modifyProfileError": "Δεν έχετε τροποποιήσει τίποτα για τον χρήστη {user}.",
   "modifyProfileContent": "Το προφίλ του χρήστη {user} φαίνεται τώρα έτσι:",
   "errorBikeSellContent": "Δεν έχετε αρκετά ποδήλατα. Έχετε μόνο {bike}.",
