--- a/bot/languages/en.json
+++ b/bot/languages/en.json
@@ -1,4 +1,14 @@
 {
+  "activated": "Activated",
+  "deactivated": "Deactivated",
+  "userRemoveMoneyNotifyTitle": "Money removed",
+  "userRemoveMoneyNotifyContent": "User {user} has removed {amount} <:blackToken:1304186797064065065> from you.",
+  "userDeletedNotifyTitle": "Your account has been deleted",
+  "userDeletedNotifyContent" : "Your account has been deleted by {user}",
+  "reason": "Reason",
+  "noReason": "No reason provided",
+  "userMessageAddMoneyTitle": "{user} has sent you a gift!",
+  "userMessageAddMoneyContent": "You have received an amount of **{amount}** <:blackToken:1304186797064065065>",
   "modifyProfileError": "You have not modified anything for the user {user}",
   "modifyProfileContent": "{user}'s profile now looks like this:",
   "errorBikeSellContent": "You don't have enough bikes. You only have {bike}.",
