--- a/bot/languages/es.json
+++ b/bot/languages/es.json
@@ -1,4 +1,14 @@
 {
+  "activated": "Activado",
+  "deactivated": "Desactivado",
+  "userRemoveMoneyNotifyTitle": "Se han eliminado fondos",
+  "userRemoveMoneyNotifyContent": "El usuario {user} ha eliminado {amount} <:blackToken:1304186797064065065> de tu cuenta.",
+  "userDeletedNotifyTitle": "Tu cuenta ha sido eliminada",
+  "userDeletedNotifyContent": "Tu cuenta ha sido eliminada por {user}.",
+  "reason": "Razón",
+  "noReason": "No se proporcionó una razón",
+  "userMessageAddMoneyTitle": "¡{user} te ha enviado un regalo!",
+  "userMessageAddMoneyContent": "Has recibido un monto de **{amount}** <:blackToken:1304186797064065065>.",
   "modifyProfileError": "No has modificado nada para el usuario {user}.",
   "modifyProfileContent": "El perfil de {user} ahora se ve así:",
   "errorBikeSellContent": "No tienes suficientes bicicletas. Solo tienes {bike}.",
