--- a/bot/languages/fr.json
+++ b/bot/languages/fr.json
@@ -1,4 +1,14 @@
 {
+  "activated": "Activé",
+  "deactivated": "Désactivé",
+  "userRemoveMoneyNotifyTitle": "Argent retiré",
+  "userRemoveMoneyNotifyContent": "L'utilisateur {user} a retiré {amount} <:blackToken:1304186797064065065> de votre compte.",
+  "userDeletedNotifyTitle": "Votre compte a été supprimé",
+  "userDeletedNotifyContent": "Votre compte a été supprimé par {user}.",
+  "reason": "Raison",
+  "noReason": "Aucune raison fournie",
+  "userMessageAddMoneyTitle": "{user} vous a envoyé un cadeau !",
+  "userMessageAddMoneyContent": "Vous avez reçu un montant de **{amount}** <:blackToken:1304186797064065065>.",
   "modifyProfileError": "Vous n'avez rien modifié pour l'utilisateur {user}.",
   "modifyProfileContent": "Le profil de {user} ressemble maintenant à ceci :",
   "errorBikeSellContent": "Vous n'avez pas assez de vélos. Vous en avez seulement {bike}.",
