--- a/bot/languages/hi.json
+++ b/bot/languages/hi.json
@@ -1,4 +1,14 @@
 {
+  "activated": "सक्रिय किया गया",
+  "deactivated": "निष्क्रिय किया गया",
+  "userRemoveMoneyNotifyTitle": "पैसे हटाए गए",
+  "userRemoveMoneyNotifyContent": "उपयोगकर्ता {user} ने आपके खाते से {amount} <:blackToken:1304186797064065065> हटा दिए हैं।",
+  "userDeletedNotifyTitle": "आपका खाता हटा दिया गया है",
+  "userDeletedNotifyContent": "आपका खाता {user} द्वारा हटा दिया गया है।",
+  "reason": "कारण",
+  "noReason": "कोई कारण प्रदान नहीं किया गया",
+  "userMessageAddMoneyTitle": "{user} ने आपको एक उपहार भेजा है!",
+  "userMessageAddMoneyContent": "आपको **{amount}** <:blackToken:1304186797064065065> की राशि प्राप्त हुई है।",
   "modifyProfileError": "आपने उपयोगकर्ता {user} के लिए कुछ भी संशोधित नहीं किया है।",
   "modifyProfileContent": "{user} की प्रोफ़ाइल अब इस प्रकार दिखती है:",
   "errorBikeSellContent": "आपके पास पर्याप्त साइकिल नहीं हैं। आपके पास केवल {bike} हैं।",
