--- a/bot/languages/it.json
+++ b/bot/languages/it.json
@@ -1,4 +1,14 @@
 {
+  "activated": "Attivato",
+  "deactivated": "Disattivato",
+  "userRemoveMoneyNotifyTitle": "Denaro rimosso",
+  "userRemoveMoneyNotifyContent": "L'utente {user} ha rimosso {amount} <:blackToken:1304186797064065065> dal tuo account.",
+  "userDeletedNotifyTitle": "Il tuo account è stato eliminato",
+  "userDeletedNotifyContent": "Il tuo account è stato eliminato da {user}.",
+  "reason": "Motivo",
+  "noReason": "Nessun motivo fornito",
+  "userMessageAddMoneyTitle": "{user} ti ha inviato un regalo!",
+  "userMessageAddMoneyContent": "Hai ricevuto un importo di **{amount}** <:blackToken:1304186797064065065>.",
   "modifyProfileError": "Non hai modificato nulla per l'utente {user}.",
   "modifyProfileContent": "Il profilo di {user} ora appare così:",
   "errorBikeSellContent": "Non hai abbastanza biciclette. Ne hai solo {bike}.",
