--- a/bot/languages/ja.json
+++ b/bot/languages/ja.json
@@ -1,4 +1,14 @@
 {
+  "activated": "有効化されました",
+  "deactivated": "無効化されました",
+  "userRemoveMoneyNotifyTitle": "お金が削除されました",
+  "userRemoveMoneyNotifyContent": "ユーザー {user} があなたのアカウントから {amount} <:blackToken:1304186797064065065> を削除しました。",
+  "userDeletedNotifyTitle": "あなたのアカウントが削除されました",
+  "userDeletedNotifyContent": "あなたのアカウントは {user} によって削除されました。",
+  "reason": "理由",
+  "noReason": "理由は提供されていません",
+  "userMessageAddMoneyTitle": "{user} からプレゼントが届きました！",
+  "userMessageAddMoneyContent": "あなたは **{amount}** <:blackToken:1304186797064065065> を受け取りました。",
   "modifyProfileError": "ユーザー {user} に対して何も変更していません。",
   "modifyProfileContent": "{user} のプロフィールは現在このようになっています:",
   "errorBikeSellContent": "自転車が足りません。あなたは {bike} 台しか持っていません。",
