--- a/bot/languages/pl.json
+++ b/bot/languages/pl.json
@@ -1,4 +1,14 @@
 {
+  "activated": "Aktywowany",
+  "deactivated": "Dezaktywowany",
+  "userRemoveMoneyNotifyTitle": "Pieniądze zostały usunięte",
+  "userRemoveMoneyNotifyContent": "Użytkownik {user} usunął {amount} <:blackToken:1304186797064065065> z twojego konta.",
+  "userDeletedNotifyTitle": "Twoje konto zostało usunięte",
+  "userDeletedNotifyContent": "Twoje konto zostało usunięte przez {user}.",
+  "reason": "Powód",
+  "noReason": "Nie podano powodu",
+  "userMessageAddMoneyTitle": "{user} wysłał ci prezent!",
+  "userMessageAddMoneyContent": "Otrzymałeś kwotę **{amount}** <:blackToken:1304186797064065065>.",
   "modifyProfileError": "Nie zmodyfikowano niczego dla użytkownika {user}.",
   "modifyProfileContent": "Profil użytkownika {user} wygląda teraz tak:",
   "errorBikeSellContent": "Nie masz wystarczającej liczby rowerów. Masz tylko {bike}.",
