--- a/bot/languages/pt.json
+++ b/bot/languages/pt.json
@@ -1,4 +1,14 @@
 {
+  "activated": "Ativado",
+  "deactivated": "Desativado",
+  "userRemoveMoneyNotifyTitle": "Dinheiro removido",
+  "userRemoveMoneyNotifyContent": "O usuário {user} removeu {amount} <:blackToken:1304186797064065065> da sua conta.",
+  "userDeletedNotifyTitle": "Sua conta foi excluída",
+  "userDeletedNotifyContent": "Sua conta foi excluída por {user}.",
+  "reason": "Razão",
+  "noReason": "Nenhuma razão fornecida",
+  "userMessageAddMoneyTitle": "{user} enviou um presente para você!",
+  "userMessageAddMoneyContent": "Você recebeu um valor de **{amount}** <:blackToken:1304186797064065065>.",
   "modifyProfileError": "Você não modificou nada para o usuário {user}.",
   "modifyProfileContent": "O perfil de {user} agora está assim:",
   "errorBikeSellContent": "Você não tem bicicletas suficientes. Você tem apenas {bike}.",
