--- a/bot/languages/ru.json
+++ b/bot/languages/ru.json
@@ -1,4 +1,14 @@
 {
+  "activated": "Активировано",
+  "deactivated": "Деактивировано",
+  "userRemoveMoneyNotifyTitle": "Деньги удалены",
+  "userRemoveMoneyNotifyContent": "Пользователь {user} удалил {amount} <:blackToken:1304186797064065065> с вашего аккаунта.",
+  "userDeletedNotifyTitle": "Ваш аккаунт был удалён",
+  "userDeletedNotifyContent": "Ваш аккаунт был удалён пользователем {user}.",
+  "reason": "Причина",
+  "noReason": "Причина не указана",
+  "userMessageAddMoneyTitle": "{user} отправил вам подарок!",
+  "userMessageAddMoneyContent": "Вы получили сумму **{amount}** <:blackToken:1304186797064065065>.",
   "modifyProfileError": "Вы ничего не изменили для пользователя {user}.",
   "modifyProfileContent": "Профиль пользователя {user} теперь выглядит так:",
   "errorBikeSellContent": "У вас недостаточно велосипедов. У вас только {bike}.",
