--- a/bot/languages/zh.json
+++ b/bot/languages/zh.json
@@ -1,4 +1,14 @@
 {
+  "activated": "已激活",
+  "deactivated": "已停用",
+  "userRemoveMoneyNotifyTitle": "资金已被移除",
+  "userRemoveMoneyNotifyContent": "用户 {user} 从您的账户中移除了 {amount} <:blackToken:1304186797064065065>。",
+  "userDeletedNotifyTitle": "您的账户已被删除",
+  "userDeletedNotifyContent": "您的账户已被 {user} 删除。",
+  "reason": "原因",
+  "noReason": "未提供原因",
+  "userMessageAddMoneyTitle": "{user} 送了您一份礼物！",
+  "userMessageAddMoneyContent": "您已收到金额 **{amount}** <:blackToken:1304186797064065065>。",
   "modifyProfileError": "您没有为用户 {user} 修改任何内容。",
   "modifyProfileContent": "{user} 的个人资料现在如下所示：",
   "errorBikeSellContent": "您的自行车不足。您只有 {bike} 辆。",
