serverInfo fix and help message added

--- a/bot/languages/ar.json
+++ b/bot/languages/ar.json
@@ -291,6 +291,10 @@
     "modifyprofile": {
       "name": "modifyprofile",
       "description": "🎭 تعديل ملف اللاعب."
+    },
+    "serverinfo": {
+      "name": "serverinfo",
+      "description": "📊 احصل على معلومات حول الخادم و CasinoBot"
     }
   },
   "categories": {
