--- a/bot/languages/hi.json
+++ b/bot/languages/hi.json
@@ -295,6 +295,10 @@
     "modifyprofile": {
       "name": "modifyprofile",
       "description": "🎭 खिलाड़ी की प्रोफ़ाइल संपादित करें।"
+    },
+    "serverinfo": {
+      "name": "serverinfo",
+      "description": "📊 सर्वर और CasinoBot के बारे में जानकारी प्राप्त करें"
     }
   },
   "categories": {
