--- a/bot/languages/ru.json
+++ b/bot/languages/ru.json
@@ -295,6 +295,10 @@
     "modifyprofile": {
       "name": "modifyprofile",
       "description": "🎭 Изменить профиль игрока."
+    },
+    "serverinfo": {
+      "name": "serverinfo",
+      "description": "📊 Получите информацию о сервере и CasinoBot"
     }
   },
   "categories": {
