--- a/bot/languages/ja.json
+++ b/bot/languages/ja.json
@@ -295,6 +295,10 @@
     "modifyprofile": {
       "name": "modifyprofile",
       "description": "🎭 プレイヤーのプロフィールを編集します。"
+    },
+    "serverinfo": {
+      "name": "serverinfo",
+      "description": "📊 サーバーとCasinoBotの情報を取得する"
     }
   },
   "categories": {
