--- a/bot/languages/en.json
+++ b/bot/languages/en.json
@@ -1,6 +1,7 @@
 {
-  "activated": "Activated",
-  "deactivated": "Deactivated",
+  "serverName": "Server Name",
+  "serverMembers": "Server Members",
+  "economyType": "Economy Type",
   "userRemoveMoneyNotifyTitle": "Money removed",
   "userRemoveMoneyNotifyContent": "User {user} has removed {amount} <:blackToken:1304186797064065065> from you.",
   "userDeletedNotifyTitle": "Your account has been deleted",
@@ -20,8 +21,8 @@
   "wonBike": "You also won a 🚲 Bike!",
   "onlyGuildOwner": "Only {owner} has permission to do this command.",
   "onlyCreatorBotGlobal": "You can only run this command with the economy in local mode.",
-  "local": "local",
-  "global": "global",
+  "local": "Local",
+  "global": "Global",
   "setEconomy": "The type of economy has been changed to {type}.",
   "cooldownTimeContentCrime": "You need to wait **{minutes}m {seconds}s** before committing another crime.",
   "errorNotEnoughMoneyCrime": "Make sure you have at least 2,500 coins before attempting a crime to pay the fine if you get caught.",
